# vecinsn

./: CMakeLists.txt  Doxyfile  Makefile  README.md  compile.cmake  test.cpp  vecinsn.hpp  vxadvops.hpp  vxcomplex.hpp  vxops.hpp  vxtypes.hpp
test/: CMakeLists.txt  test_basic.cpp  test_matrix.cpp
test/generic/: test_all_zero.cpp  test_array.cpp  test_complex.cpp  test_fill.cpp  test_fun.cpp  test_nrelem.cpp  test_ops.cpp  test_type_maker.cpp
test/tachy/: CMakeLists.txt
test/x86/: CMakeLists.txt  test_basic.cpp  test_nrelem.cpp  test_type_maker.cpp
vx/: vxadvops.hpp  vxalmostequal.hpp  vxarray.hpp  vxcomplex.hpp  vxfun.hpp  vxmatrix.hpp  vxops.hpp  vxtypes.hpp
vx/arm/: todo.md
vx/tachy/: vxintrin.h  vxintrin.hpp  vxtypes.hpp
vx/x86/: CMakeLists.txt  vxcomplex.hpp  vxfun.hpp  vxops.hpp  vxtypes.hpp
